# Fashion_Brand

./: LANGCHAIN_STREAMING_RESEARCH.md  LANGGRAPH_EXPLAINED_FOR_STUDENTS.md  README.md  bot_checkpoint.sqlite  main.py  mcp_chat_history.db-shm  mcp_chat_history.db-wal  mortgage_checkpoints.db  pyproject.toml  support_checkpoints.db  travel_agent_checkpoints.db
Advance_RAG/: app.py  financebot.sqlite  main.py  new_workflow.py  vectorstore_setup.py  workflow.py
Deep_Agents/: Deep_Agents_Overview.ipynb
Experiments/: 001_simple_llm_workflow.ipynb  002_sentiment_review_reply_workflow.ipynb  003_simple_rag_agent.ipynb  10_map_reduce.ipynb  11_multiagent.ipynb  13_advance_rag.ipynb  14_short_term_memory.ipynb  15_langgraph_long_term_memory.ipynb  16_ltm_postgres.ipynb  17_whatsapp_agent.ipynb  18_Build_a_Planning_Agent_for_Deep_Research_&_Structured_Report_Generation.ipynb  4_X_post_generator_workflow.ipynb  5_Chatbot_with_InMemory_Saver.ipynb  6_sqlite_saver.py  7_persistance.ipynb  8_tools.ipynb  9_HITL.ipynb  financebot_new.sqlite  financebot_new.sqlite-shm  financebot_new.sqlite-wal
Langchain_Agents/: Customer_Support_Swarm_Network_Notebook_6.ipynb  Deep_Research_Multi_Agent_Notebook.ipynb  Mortgage_Underwriting_Handoffs_Notebook_5.ipynb  Multi_Agent_Subagents_Notebook.ipynb  Multi_Agent_Subagents_Notebook_3.ipynb  RAG_Agent_Notebook.ipynb  RAG_Agent_Notebook_1.ipynb  SQL_Agent_HITL_PII_Notebook.ipynb  SQL_Agent_HITL_PII_Notebook_2.ipynb  mortgage_checkpoints.db  mortgage_checkpoints.db-shm  mortgage_checkpoints.db-wal  support_checkpoints.db-shm  support_checkpoints.db-wal  travel_agent_checkpoints.db-shm  travel_agent_checkpoints.db-wal
MCP/: Salary_Prediction_MCP_Agent.ipynb
RAG_embedding/: data_gathering.py  embedding.py  embedding_setup.py
(+25 files in other folders)
