[project]
name = "agents-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "ddgs>=9.14.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.5",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pdfminer>=20191125",
    "pdfminer-six>=20260107",
    "python-dotenv>=1.2.2",
]
